--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CheatActivity"
-            android:label="@string/app_name"
-            />
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
